--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <!-- ----  style sheet --- -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
 
 </head>
 
@@ -109,7 +111,7 @@
 
     <!-- ---- Start our services ----  -->
     <section class="service">
-        <div class="container">
+        <div class="cnt-lg">
             <div class="title_sec">
                 <h3>Our services</h3>
                 <h2>Digital way always the Right choice for innovation</h2>
@@ -186,7 +188,7 @@
 
     <!-- ---- Start Project ---  -->
     <section class="project">
-        <div class="container">
+        <div class="cnt-lg">
             <div class="row justify-content-between align-items-center row-head">
                 <div class="col-md-6">
                     <div class="title_sec">
@@ -286,6 +288,7 @@
     </section>
     <!-- ---- End Project ---  -->
 
+    <!-- ---- Start Work ----  -->
     <section class="work">
         <div class="container">
             <div class="title_sec">
@@ -327,7 +330,8 @@
                                 <img src="img/icons/ser-icon.svg" alt="">
                             </div>
                             <h4>High Quality standards</h4>
-                            <p>We aim to maintain high-quality standards and have a very comprehensive internal process. We
+                            <p>We aim to maintain high-quality standards and have a very comprehensive internal process.
+                                We
                                 follow coding standards that ensure simple, efficient, and maintainable code to avoid
                                 technical debt.</p>
                         </div>
@@ -336,14 +340,16 @@
             </div>
         </div>
     </section>
+    <!-- ---- End Work ----  -->
 
+    <!-- ---- Start team ----  -->
     <section class="team">
-        <div class="container">
+        <div class="cnt-lg">
             <div class="title_sec">
                 <h2>Our <span>Team</span></h2>
             </div>
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="team-wrap">
                         <div class="img">
                             <img src="img/team-01.jpg" alt="">
@@ -354,7 +360,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="team-wrap">
                         <div class="img">
                             <img src="img/team-02.jpg" alt="">
@@ -365,7 +371,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="team-wrap">
                         <div class="img">
                             <img src="img/team-03.jpg" alt="">
@@ -376,7 +382,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="team-wrap">
                         <div class="img">
                             <img src="img/team-04.jpg" alt="">
@@ -390,11 +396,172 @@
             </div>
         </div>
     </section>
+    <!-- ---- End team ----  -->
+
+    <!-- ---- start deal ----  -->
+    <section class="deal">
+        <div class="cnt-lg">
+            <div class="title_sec">
+                <h2>Numbers that seal the <span>deal</span></h2>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    <div class="deal-wrap">
+                        <h3>40<span>+</span></h3>
+                        <p>Over the past 5 years, I’ve worked <span>with more than 40 companies.</span></p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="deal-wrap">
+                        <h3>4.9<span>/</span>5</h3>
+                        <p>Clients have consistently rated me <span>5/5, except one Brett.</span></p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="deal-wrap">
+                        <h3>2M<span>+</span></h3>
+                        <p>We’ve driven over 2M conversions <span>through content.</span></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ---- end deal ----  -->
+
+    <!-- ---- start client -----  -->
+    <section class="client">
+        <div class="container">
+            <div class="title_sec">
+                <h2>What does our <span>clients</span> say</h2>
+                <p>Using our services saves you time and helps you build beautiful products with complete ease.</p>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-7 col-md-10">
+                    <div class="client-slider">
+                        <div class="item">
+                            <div class="client-wrap">
+                                <div class="flex justify-content-center">
+                                    <div class="img">
+                                        <img src="img/client.jpg" alt="">
+                                    </div>
+                                    <div class="txt">
+                                        <h4>Tony Andris</h4>
+                                        <p>CEO, Jaac</p>
+                                    </div>
+                                </div>
+                                <div class="content">
+                                    <p>“The project was successful. Apex tackled challenges head-on and created
+                                        client-oriented
+                                        solutions. They deliver what they promise within the timeframe that they
+                                        promise.”</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="client-wrap">
+                                <div class="flex justify-content-center">
+                                    <div class="img">
+                                        <img src="img/client.jpg" alt="">
+                                    </div>
+                                    <div class="txt">
+                                        <h4>Tony Andris</h4>
+                                        <p>Manager</p>
+                                    </div>
+                                </div>
+                                <div class="content">
+                                    <p>“The project was successful. Apex tackled challenges head-on and created
+                                        client-oriented
+                                        solutions. They deliver what they promise within the timeframe that they
+                                        promise.”</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="client-wrap">
+                                <div class="flex justify-content-center">
+                                    <div class="img">
+                                        <img src="img/client.jpg" alt="">
+                                    </div>
+                                    <div class="txt">
+                                        <h4>Alex oghan</h4>
+                                        <p>UX/UI Designer</p>
+                                    </div>
+                                </div>
+                                <div class="content">
+                                    <p>“The project was successful. Apex tackled challenges head-on and created
+                                        client-oriented
+                                        solutions. They deliver what they promise within the timeframe that they
+                                        promise.”</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ---- end client -----  -->
+
+    <!-- ---- start footer ----  -->
+    <footer>
+        <div class="container">
+            <div class="footer-top">
+                <div class="flex justify-content-between">
+                    <div class="left-txt">
+                        <h3>Let's work together</h3>
+                        <p>We can help bring your dream Project to life with ease.</p>
+                        <a href="#" class="btn btn-white"><span>Find More</span> <span><i class="fa-solid fa-arrow-right"></i></span></a>
+                    </div>
+                    <div class="right-social">
+                        <p>Follow us</p>
+                        <ul>
+                            <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <div class="flex justify-content-between">
+                    <div class="ft-logo">
+                        <div class="img">
+                            <img src="img/logo.png" alt="">
+                        </div>
+                    </div>
+                    <div class="menu-list">
+                        <ul>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Projects</a></li>
+                            <li><a href="#">Blogs</a></li>
+                            <li><a href="#">FAQs</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="numb">
+                        <p><img src="img/icons/circle.svg" alt="">
+                            +23323137347632
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="cnt-lg border-top"></div>
+        <div class="container">
+            <div class="copyright-text">
+                <p>Copyright © 2022 . All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+    <!-- ---- end footer ----  -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+        <script src="js/slick.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/custom.js"></script>
 </body>
 
 </html>
