Add Some Section

--- a/index.html
+++ b/index.html
@@ -95,11 +95,12 @@
             <div class="row">
                 <div class="col-lg-10">
                     <div class="txt text-center">
-                        <h1>Re-imagining businesses for hyper performance</h1>
+                        <h1>Reinventing Business for Maximum Performance</h1>
                         <div class="text">
-                            <p>Digital transformation and product development services that help you leverage the latest
-                                Cloud, AI, Big Data, and Mobile technologies to deliver efficiency, innovation, and
-                                agility across multiple industries and business verticals.</p>
+                            <p>Revolutionize your business with our digital transformation and product development
+                                services. Our solutions leverage cutting-edge Cloud, AI, Big Data, and Mobile
+                                technologies to boost efficiency, drive innovation, and increase agility across a range
+                                of industries and business verticals.</p>
                             <a href="#" class="btn btn-outline-wht">Get started <span><i
                                         class="fa-solid fa-arrow-right"></i></span></a>
                         </div>
@@ -114,66 +115,66 @@
         <div class="cnt-lg">
             <div class="title_sec">
                 <h3>Our services</h3>
-                <h2>Digital way always the Right choice for innovation</h2>
+                <h2>When it comes to innovation, the digital route is the way to go</h2>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6">
                     <div class="ser-box">
-                        <img src="img/icons/ser-icon.svg" alt="">
+                        <img src="img/icons/ser-icon-b1.svg" class="icn-b" alt="">
+                        <img src="img/icons/ser-icon-w1.svg" class="icn-w" alt="">
                         <div class="txt">
                             <h3>Software Development</h3>
-                            <p>Unique <span>web apps</span> with modern approaches and latest technologies to meet your
-                                business’ needs.</p>
+                            <p>Transforming your ideas into fully-functional software products</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="ser-box">
-                        <img src="img/icons/ser-icon.svg" alt="">
+                        <img src="img/icons/ser-icon-b1.svg" class="icn-b" alt="">
+                        <img src="img/icons/ser-icon-w1.svg" class="icn-w" alt="">
                         <div class="txt">
                             <h3>Website Development</h3>
-                            <p>Unique <span>web apps</span> with modern approaches and latest technologies to meet your
-                                business’ needs.</p>
+                            <p>Developing visually stunning and functional websites that engage your audience</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="ser-box">
-                        <img src="img/icons/ser-icon.svg" alt="">
+                        <img src="img/icons/ser-icon-b3.svg" class="icn-b" alt="">
+                        <img src="img/icons/ser-icon-w3.svg" class="icn-w" alt="">
                         <div class="txt">
                             <h3>Mobile Application Development</h3>
-                            <p>Unique <span>web apps</span> with modern approaches and latest technologies to meet your
-                                business’ needs.</p>
+                            <p>Building innovative mobile apps to drive your business growth</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="ser-box">
-                        <img src="img/icons/ser-icon.svg" alt="">
+                        <img src="img/icons/ser-icon-b4.svg" class="icn-b" alt="">
+                        <img src="img/icons/ser-icon-w4.svg" class="icn-w" alt="">
+                        <div class="txt">
+                            <h3>Desktop Application software</h3>
+                            <p>Custom SEO strategies to improve your website's search engine rankings</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="ser-box">
+                        <img src="img/icons/ser-icon-b5.svg" class="icn-b" alt="">
+                        <img src="img/icons/ser-icon-w5.svg" class="icn-w" alt="">
                         <div class="txt">
                             <h3>UI/UX Designing</h3>
-                            <p>Unique <span>web apps</span> with modern approaches and latest technologies to meet your
-                                business’ needs.</p>
+                            <p>Designing visually stunning interfaces that engage and delight users</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="ser-box">
-                        <img src="img/icons/ser-icon.svg" alt="">
+                        <img src="img/icons/ser-icon-b6.svg" class="icn-b" alt="">
+                        <img src="img/icons/ser-icon-w6.svg" class="icn-w" alt="">
                         <div class="txt">
                             <h3>Graphic Designing</h3>
-                            <p>Unique <span>web apps</span> with modern approaches and latest technologies to meet your
-                                business’ needs.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="ser-box">
-                        <img src="img/icons/ser-icon.svg" alt="">
-                        <div class="txt">
-                            <h3>SEO</h3>
-                            <p>Unique <span>web apps</span> with modern approaches and latest technologies to meet your
-                                business’ needs.</p>
+                            <p>Crafting unique and original designs that represent your brand's personality</p>
                         </div>
                     </div>
                 </div>
@@ -192,9 +193,8 @@
             <div class="row justify-content-between align-items-center row-head">
                 <div class="col-md-6">
                     <div class="title_sec">
-                        <h2>Latest <span>Projects</span> </h2>
-                        <p>Using our services saves you time and helps you build beautiful products with complete ease.
-                        </p>
+                        <h2>Latest Projects</h2>
+                        <p>Experience our creative vision and technical excellence through our latest projects</p>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -213,7 +213,7 @@
                             <div class="text">
                                 <div class="flex">
                                     <div class="txt">
-                                        <h3>Ledger Book</h3>
+                                        <h3>Ledger Book & khata Book</h3>
                                         <p>Mobile application Development & UI/UX Design</p>
                                     </div>
                                     <div class="icons">
@@ -251,8 +251,8 @@
                             <div class="text">
                                 <div class="flex">
                                     <div class="txt">
-                                        <h3>GrowthPool</h3>
-                                        <p>website Development & UI/UX Design</p>
+                                        <h3>FY Trader</h3>
+                                        <p>Desktop Application Software</p>
                                     </div>
                                     <div class="icons">
                                         <div class="icn"><i class="fa-solid fa-arrow-right"></i></div>
@@ -282,7 +282,7 @@
                 </div>
             </div>
             <div class="more-btn text-center">
-                <a href="#" class="btn btn-outline">Find More <span><i class="fa-solid fa-arrow-right"></i></span></a>
+                <a href="#" class="btn btn-outline">See More Work<span><i class="fa-solid fa-arrow-right"></i></span></a>
             </div>
         </div>
     </section>
@@ -300,7 +300,7 @@
                     <div class="work-wrap">
                         <div class="work-info">
                             <div class="img">
-                                <img src="img/icons/ser-icon.svg" alt="">
+                                <img src="img/icons/ser-icon-b1.svg" alt="">
                             </div>
                             <h4>User Experience Obsessed</h4>
                             <p>We believe in human-centered design, and our perspective towards building custom
@@ -314,7 +314,7 @@
                     <div class="work-wrap">
                         <div class="work-info">
                             <div class="img">
-                                <img src="img/icons/ser-icon.svg" alt="">
+                                <img src="img/icons/ser-icon-b1.svg" alt="">
                             </div>
                             <h4>Agile and Learn Driven</h4>
                             <p>Our processes are built around lean principles, always working in incremental ways to
@@ -327,7 +327,7 @@
                     <div class="work-wrap">
                         <div class="work-info">
                             <div class="img">
-                                <img src="img/icons/ser-icon.svg" alt="">
+                                <img src="img/icons/ser-icon-b1.svg" alt="">
                             </div>
                             <h4>High Quality standards</h4>
                             <p>We aim to maintain high-quality standards and have a very comprehensive internal process.
@@ -346,7 +346,7 @@
     <section class="team">
         <div class="cnt-lg">
             <div class="title_sec">
-                <h2>Our <span>Team</span></h2>
+                <h2>Our Team</h2>
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-6">
@@ -510,7 +510,8 @@
                     <div class="left-txt">
                         <h3>Let's work together</h3>
                         <p>We can help bring your dream Project to life with ease.</p>
-                        <a href="#" class="btn btn-white"><span>Find More</span> <span><i class="fa-solid fa-arrow-right"></i></span></a>
+                        <a href="#" class="btn btn-white"><span>Let's talk</span> <span><i
+                                    class="fa-solid fa-arrow-right"></i></span></a>
                     </div>
                     <div class="right-social">
                         <p>Follow us</p>
@@ -559,9 +560,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-        <script src="js/slick.js" type="text/javascript" charset="utf-8"></script>
-        <script src="js/custom.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <script src="js/slick.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/custom.js"></script>
 </body>
 
 </html>
