Add Some Section

--- a/index.html
+++ b/index.html
@@ -46,40 +46,16 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
+                            <a class="nav-link" href="#">Sevices</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-links" href="#">Services</a>
-                            <div class="sub_list d-none">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-lg-4 ps-0">
-                                            <ul>
-                                                <li><a href="#">Web Development</a></li>
-                                                <li><a href="#">Mobile Apps</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <ul>
-                                                <li><a href="#">E-commerce Development</a></li>
-                                                <li><a href="#">Graphic Designing</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <ul>
-                                                <li><a href="#">Digital Marketing</a></li>
-                                                <li><a href="#">Data Science</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            <a class="nav-link" href="#">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Team</a>
+                            <a class="nav-link" href="#">Blogs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link" href="#">FAQs</a>
                         </li>
                     </ul>
                     <div class="d-flex">
@@ -341,62 +317,6 @@
         </div>
     </section>
     <!-- ---- End Work ----  -->
-
-    <!-- ---- Start team ----  -->
-    <section class="team">
-        <div class="cnt-lg">
-            <div class="title_sec">
-                <h2>Our Team</h2>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-6">
-                    <div class="team-wrap">
-                        <div class="img">
-                            <img src="img/team-01.jpg" alt="">
-                        </div>
-                        <div class="txt">
-                            <h3>Alex oghan</h3>
-                            <p>Co- Founder CEO</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="team-wrap">
-                        <div class="img">
-                            <img src="img/team-02.jpg" alt="">
-                        </div>
-                        <div class="txt">
-                            <h3>Alex oghan</h3>
-                            <p>Manager</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="team-wrap">
-                        <div class="img">
-                            <img src="img/team-03.jpg" alt="">
-                        </div>
-                        <div class="txt">
-                            <h3>Alex oghan</h3>
-                            <p>UX/UI Designer</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="team-wrap">
-                        <div class="img">
-                            <img src="img/team-04.jpg" alt="">
-                        </div>
-                        <div class="txt">
-                            <h3>Alex oghan</h3>
-                            <p>HR</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- ---- End team ----  -->
 
     <!-- ---- start deal ----  -->
     <section class="deal">
