--- a/service.html
+++ b/service.html
@@ -46,40 +46,16 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
+                            <a class="nav-link" href="#">Sevices</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-links" href="#">Services</a>
-                            <div class="sub_list d-none">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-lg-4 ps-0">
-                                            <ul>
-                                                <li><a href="#">Web Development</a></li>
-                                                <li><a href="#">Mobile Apps</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <ul>
-                                                <li><a href="#">E-commerce Development</a></li>
-                                                <li><a href="#">Graphic Designing</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <ul>
-                                                <li><a href="#">Digital Marketing</a></li>
-                                                <li><a href="#">Data Science</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            <a class="nav-link" href="#">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Team</a>
+                            <a class="nav-link" href="#">Blogs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link" href="#">FAQs</a>
                         </li>
                     </ul>
                     <div class="d-flex">
@@ -97,7 +73,8 @@
                     <div class="txt">
                         <h2>We move the digital industry forward</h2>
                         <div class="text">
-                            <p>We provide an extensive range of services, taking your business from an idea straight through to a result both client and staff can be proud of.</p>
+                            <p>We provide an extensive range of services, taking your business from an idea straight
+                                through to a result both client and staff can be proud of.</p>
                             <a href="#" class="btn btn-white"><span>Know all services</span> <span><i
                                         class="fa-solid fa-arrow-down"></i></span></a>
                         </div>
@@ -201,6 +178,63 @@
             </div>
         </div>
     </section>
+
+
+    <!-- ---- Start team ----  -->
+    <section class="team d-none">
+        <div class="cnt-lg">
+            <div class="title_sec">
+                <h2>Our Team</h2>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div class="team-wrap">
+                        <div class="img">
+                            <img src="img/team-01.jpg" alt="">
+                        </div>
+                        <div class="txt">
+                            <h3>Alex oghan</h3>
+                            <p>Co- Founder CEO</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="team-wrap">
+                        <div class="img">
+                            <img src="img/team-02.jpg" alt="">
+                        </div>
+                        <div class="txt">
+                            <h3>Alex oghan</h3>
+                            <p>Manager</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="team-wrap">
+                        <div class="img">
+                            <img src="img/team-03.jpg" alt="">
+                        </div>
+                        <div class="txt">
+                            <h3>Alex oghan</h3>
+                            <p>UX/UI Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="team-wrap">
+                        <div class="img">
+                            <img src="img/team-04.jpg" alt="">
+                        </div>
+                        <div class="txt">
+                            <h3>Alex oghan</h3>
+                            <p>HR</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ---- End team ----  -->
 
     <!-- ---- start footer ----  -->
     <footer>
