Add Some Section

--- a/service.html
+++ b/service.html
@@ -166,14 +166,194 @@
     </section>
     <!-- ---- End our services ----  -->
 
-    <section class="case-study d-none">
+    <section class="case-study">
         <div class="container">
             <div class="row align-items-center justify-content-between">
-                <div class="col-lg-6"></div>
+                <div class="col-lg-6">
+                    <div class="case-wrap">
+                        <span class="top-txt">Software Development</span>
+                        <h3>Robust web app development with Apex</h3>
+                        <p>Streamlined web app development with Agile methodology. From effective communication and
+                            planned revisions to rigorous QA testing, we ensure successful product launches.</p>
+                        <p class="mar-top">We work with these Technologies </p>
+                        <p><strong>Spring MVC / Spring Boot / React native / Flutter / Node.js / Python Java / HTML /
+                                CSS / AWS / Android / Next.js / WordPress / Shopify / HCL Commerce</strong></p>
+                        <a href="#" class="btn btn-outline">See Case study <span><i
+                                    class="fa-solid fa-arrow-right"></i></span></a>
+                    </div>
+                </div>
                 <div class="col-lg-5">
                     <div class="img">
-                        <img src="" alt="">
+                        <img src="img/case-01.jpg" alt="">
                     </div>
+                </div>
+            </div>
+            <!-- ----  -->
+            <div class="row align-items-center justify-content-between">
+                <div class="col-lg-5">
+                    <div class="img">
+                        <img src="img/case-02.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="case-wrap">
+                        <span class="top-txt txt2">Website Development</span>
+                        <h3>Modern and dynamic website development with cutting-edge technology</h3>
+                        <p>We partner with a diverse range of clients, from tech startups to legacy businesses, to help
+                            drive their digital transformation. Our custom web applications are designed to deliver
+                            effective solutions tailored to their specific needs.</p>
+                        <p class="mar-top">We work with these Technologies </p>
+                        <p><strong>Spring MVC / Spring Boot / React native / Flutter / Node.js / Python Java / HTML
+                                /
+                                CSS / AWS / Android / Next.js / WordPress / Shopify / HCL Commerce</strong></p>
+                        <a href="#" class="btn btn-outline">See Case study <span><i
+                                    class="fa-solid fa-arrow-right"></i></span></a>
+                    </div>
+                </div>
+            </div>
+            <!-- ----  -->
+            <div class="row align-items-center justify-content-between">
+                <div class="col-lg-6">
+                    <div class="case-wrap">
+                        <span class="top-txt">Mobile Application development</span>
+                        <h3>Maximize your app's reach and engagement with expert mobile application development services
+                        </h3>
+                        <p>Experience seamless, high-quality mobile app development across iOS, Android, and
+                            cross-platform, backed by powerful technology and without sacrificing features or
+                            performance.</p>
+                        <p class="mar-top">We work with these Technologies </p>
+                        <p><strong>Spring MVC / Spring Boot / React native / Flutter / Node.js / Python Java / HTML /
+                                CSS / AWS / Android / Next.js / WordPress / Shopify / HCL Commerce</strong></p>
+                        <a href="#" class="btn btn-outline">See Case study <span><i
+                                    class="fa-solid fa-arrow-right"></i></span></a>
+                    </div>
+                </div>
+                <div class="col-lg-5">
+                    <div class="img">
+                        <img src="img/case-03.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <!-- ----  -->
+            <div class="row align-items-center justify-content-between">
+                <div class="col-lg-5">
+                    <div class="img">
+                        <img src="img/case-04.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="case-wrap">
+                        <span class="top-txt txt3">Desktop Application</span>
+                        <h3>Combining business strategy and UX design to drive measurable results for your brand</h3>
+                        <p>Our team is passionate about designing challenging B2B digital products that deliver
+                            exceptional user experiences. We specialize in uncovering untapped insights to transform
+                            complex applications into simple and relatable experiences for both consumers and
+                            enterprises.</p>
+                        <p class="mar-top">We work with these Technologies </p>
+                        <p><strong>Spring MVC / Spring Boot / React native / Flutter / Node.js / Python Java / HTML
+                                /
+                                CSS / AWS / Android / Next.js / WordPress / Shopify / HCL Commerce</strong></p>
+                        <a href="#" class="btn btn-outline">See Case study <span><i
+                                    class="fa-solid fa-arrow-right"></i></span></a>
+                    </div>
+                </div>
+            </div>
+            <!-- ----  -->
+            <div class="row align-items-center justify-content-between">
+                <div class="col-lg-6">
+                    <div class="case-wrap">
+                        <span class="top-txt txt3">UIUX design</span>
+                        <h3>Combining business strategy and UX design to drive measurable results for your brand</h3>
+                        <p>Our team is passionate about designing challenging B2B digital products that deliver
+                            exceptional user experiences. We specialize in uncovering untapped insights to transform
+                            complex applications into simple and relatable experiences for both consumers and
+                            enterprises.</p>
+                        <a href="#" class="btn btn-outline">See Case study <span><i
+                                    class="fa-solid fa-arrow-right"></i></span></a>
+                    </div>
+                </div>
+                <div class="col-lg-5">
+                    <div class="img">
+                        <img src="img/case-05.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <!-- ----  -->
+            <div class="row align-items-center justify-content-between last-row">
+                <div class="col-lg-5">
+                    <div class="img">
+                        <img src="img/case-06.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="case-wrap">
+                        <span class="top-txt txt3">Graphic Designing</span>
+                        <h3>Combining business strategy and UX design to drive measurable results for your brand</h3>
+                        <p>Our team is passionate about designing challenging B2B digital products that deliver
+                            exceptional user experiences. We specialize in uncovering untapped insights to transform
+                            complex applications into simple and relatable experiences for both consumers and
+                            enterprises.</p>
+                        <a href="#" class="btn btn-outline">See Case study <span><i
+                                    class="fa-solid fa-arrow-right"></i></span></a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- ----  -->
+    <section class="our-process cnt-lg">
+        <div class="row justify-content-between">
+            <div class="col-lg-5">
+                <div class="process-list">
+                    <ul>
+                        <li>
+                            <div class="d-flex justify-content-between">
+                                <div class="txt">
+                                    Success
+                                </div>
+                                <div class="numb">
+                                    100%
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-content-between">
+                                <div class="txt">
+                                    Growth
+                                </div>
+                                <div class="numb">
+                                    94%
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-content-between">
+                                <div class="txt">
+                                    Solutions
+                                </div>
+                                <div class="numb">
+                                    94%
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-5">
+                <div class="process-wrap">
+                    <h5>Our process</h5>
+                    <h3>Enjoy The Ideal Process Experience</h3>
+                    <p>Our service delivery process is streamlined around agile principles and a design thinking-based
+                        approach.</p>
+                    <ul>
+                        <li>Requirement Engineering</li>
+                        <li>Solution Design</li>
+                        <li>Solution Implementation</li>
+                        <li>Post Implementation</li>
+                        <li>Changes managment</li>
+                    </ul>
                 </div>
             </div>
         </div>
