--- a/service.html
+++ b/service.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Services</title>
     <!-- ------ Bootstrap -----  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -59,7 +59,7 @@
                         </li>
                     </ul>
                     <div class="d-flex">
-                        <a href="#" class="btn">Contact us</a>
+                        <a href="contact-us.html" class="btn">Contact us</a>
                     </div>
                 </div>
             </div>
@@ -168,7 +168,7 @@
 
     <section class="case-study">
         <div class="container">
-            <div class="row align-items-center justify-content-between">
+            <div class="row align-items-center justify-content-between row-one">
                 <div class="col-lg-6">
                     <div class="case-wrap">
                         <span class="top-txt">Software Development</span>
@@ -189,7 +189,7 @@
                 </div>
             </div>
             <!-- ----  -->
-            <div class="row align-items-center justify-content-between">
+            <div class="row align-items-center justify-content-between row-two">
                 <div class="col-lg-5">
                     <div class="img">
                         <img src="img/case-02.jpg" alt="">
@@ -212,7 +212,7 @@
                 </div>
             </div>
             <!-- ----  -->
-            <div class="row align-items-center justify-content-between">
+            <div class="row align-items-center justify-content-between row-four">
                 <div class="col-lg-6">
                     <div class="case-wrap">
                         <span class="top-txt">Mobile Application development</span>
@@ -235,7 +235,7 @@
                 </div>
             </div>
             <!-- ----  -->
-            <div class="row align-items-center justify-content-between">
+            <div class="row align-items-center justify-content-between row-five">
                 <div class="col-lg-5">
                     <div class="img">
                         <img src="img/case-04.jpg" alt="">
@@ -259,7 +259,7 @@
                 </div>
             </div>
             <!-- ----  -->
-            <div class="row align-items-center justify-content-between">
+            <div class="row align-items-center justify-content-between row-six">
                 <div class="col-lg-6">
                     <div class="case-wrap">
                         <span class="top-txt txt3">UIUX design</span>
@@ -358,63 +358,6 @@
             </div>
         </div>
     </section>
-
-
-    <!-- ---- Start team ----  -->
-    <section class="team d-none">
-        <div class="cnt-lg">
-            <div class="title_sec">
-                <h2>Our Team</h2>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-6">
-                    <div class="team-wrap">
-                        <div class="img">
-                            <img src="img/team-01.jpg" alt="">
-                        </div>
-                        <div class="txt">
-                            <h3>Alex oghan</h3>
-                            <p>Co- Founder CEO</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="team-wrap">
-                        <div class="img">
-                            <img src="img/team-02.jpg" alt="">
-                        </div>
-                        <div class="txt">
-                            <h3>Alex oghan</h3>
-                            <p>Manager</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="team-wrap">
-                        <div class="img">
-                            <img src="img/team-03.jpg" alt="">
-                        </div>
-                        <div class="txt">
-                            <h3>Alex oghan</h3>
-                            <p>UX/UI Designer</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="team-wrap">
-                        <div class="img">
-                            <img src="img/team-04.jpg" alt="">
-                        </div>
-                        <div class="txt">
-                            <h3>Alex oghan</h3>
-                            <p>HR</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- ---- End team ----  -->
 
     <!-- ---- start footer ----  -->
     <footer>
