Add Some Section

--- a/contact-us.html
+++ b/contact-us.html
@@ -108,6 +108,11 @@
                                             aria-describedby="helpId">
                                     </div>
                                 </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <a href="#" class="btn form-control">Send Inquiry <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span></a>
+                                    </div>
+                                </div>
                             </div>
                         </form>
                     </div>
