Add Some Section

--- a/contact-us.html
+++ b/contact-us.html
@@ -52,11 +52,11 @@
                             <a class="nav-link" href="project.html">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Blogs</a>
+                            <a class="nav-link" href="#">About Us</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#">FAQs</a>
-                        </li>
+                        </li> -->
                     </ul>
                     <div class="d-flex">
                         <a href="contact-us.html" class="btn">Contact us</a>
@@ -75,7 +75,7 @@
                     <span>together</span>
                 </h2>
             </div>
-            <div class="row">
+            <div class="row justify-content-between">
                 <div class="col-lg-6">
                     <div class="con-wrap">
                         <p>Please share your project goals with us and we'll be in touch within 24-48 hours to discuss
@@ -88,7 +88,8 @@
                                         <h5>How can we help you?</h5>
                                     </div>
                                     <div class="form-group">
-                                        <textarea class="form-control" placeholder="Tell us about your project" name="" id="" cols="30" rows="5"></textarea>
+                                        <textarea class="form-control" placeholder="Tell us about your project" name=""
+                                            id="" cols="30" rows="5"></textarea>
                                     </div>
                                 </div>
                                 <div class="col-lg-">
@@ -98,27 +99,64 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
-                                        <input type="text" name="" id="" class="form-control" placeholder="First and Last Name"
-                                            aria-describedby="helpId">
+                                        <input type="text" name="" id="" class="form-control"
+                                            placeholder="First and Last Name" aria-describedby="helpId">
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
-                                        <input type="text" name="" id="" class="form-control" placeholder="Email address"
-                                            aria-describedby="helpId">
+                                        <input type="text" name="" id="" class="form-control"
+                                            placeholder="Email address" aria-describedby="helpId">
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
                                     <div class="form-group">
-                                        <a href="#" class="btn">Send Inquiry <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span></a>
+                                        <a href="#" class="btn">Send Inquiry <span><i class="fa fa-arrow-right"
+                                                    aria-hidden="true"></i></span></a>
                                     </div>
                                 </div>
                             </div>
                         </form>
+
+                        <div class="flex flex-loc">
+                            <div class="loc-wrap">
+                                <h4>Pakistan</h4>
+                                <p>Office # xyx Gulshan-e-Iqbal, Karachi</p>
+                                <a href="#" class="btn btn-outline">Get direction <span><i class="fa fa-arrow-right"
+                                            aria-hidden="true"></i></span></a>
+                            </div>
+                            <div class="loc-wrap">
+                                <h4>USA</h4>
+                                <p>5214 California Unit #11223,San Francisco, CA 943343</p>
+                                <a href="#" class="btn btn-outline">Get direction <span><i class="fa fa-arrow-right"
+                                            aria-hidden="true"></i></span></a>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
-                <div class="col-lg-6"></div>
+                <div class="col-lg-5">
+                    <div class="con-detail">
+                        <div class="detail-wrap flex">
+                            <div class="icon">
+                                <img src="img/icons/envelope.svg" alt="">
+                            </div>
+                            <div class="txt">
+                                <p>have a project in mind? send a message.</p>
+                                <a href="mailto:info@examples.com">info@examples.com</a>
+                            </div>
+                        </div>
+                        <div class="detail-wrap flex">
+                            <div class="icon">
+                                <img src="img/icons/phone.svg" alt="">
+                            </div>
+                            <div class="txt">
+                                <p>We’re interested in working together</p>
+                                <a href="tel:">+(888)123 4567</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -186,6 +224,19 @@
     </section>
     <!-- ---- End team ----  -->
 
+    <section class="inset_logo">
+        <div class="container">
+            <div class="flex img justify-content-center">
+                <img src="img/logo/lg-01.png" alt="">
+                <img src="img/logo/lg-02.png" alt="">
+                <img src="img/logo/lg-03.png" alt="">
+                <img src="img/logo/lg-04.png" alt="">
+                <img src="img/logo/lg-05.png" alt="">
+                <img src="img/logo/lg-06.png" alt="">
+            </div>
+        </div>
+    </section>
+
     <!-- ---- start footer ----  -->
     <footer>
         <div class="container">
@@ -218,8 +269,8 @@
                         <ul>
                             <li><a href="#">Services</a></li>
                             <li><a href="#">Projects</a></li>
-                            <li><a href="#">Blogs</a></li>
-                            <li><a href="#">FAQs</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <!-- <li><a href="#">FAQs</a></li> -->
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
