--- a/service.html
+++ b/service.html
@@ -52,11 +52,11 @@
                             <a class="nav-link" href="project.html">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Blogs</a>
+                            <a class="nav-link" href="#">About Us</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#">FAQs</a>
-                        </li>
+                        </li> -->
                     </ul>
                     <div class="d-flex">
                         <a href="contact-us.html" class="btn">Contact us</a>
@@ -391,8 +391,8 @@
                         <ul>
                             <li><a href="#">Services</a></li>
                             <li><a href="#">Projects</a></li>
-                            <li><a href="#">Blogs</a></li>
-                            <li><a href="#">FAQs</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <!-- <li><a href="#">FAQs</a></li> -->
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
